--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -5,11 +5,11 @@
       <i class="fas fa-plus"></i>
       Add Achievement
     </button>
-    <button type="button" class="btn btn--primary" name="export-achievements">
+    <button type="button" class="btn btn--primary" name="export-achievements" title="Export achievement data to clipboard">
       <i class="fas fa-download"></i>
       Export
     </button>
-    <button type="button" class="btn btn--primary" name="import-achievements">
+    <button type="button" class="btn btn--primary" name="import-achievements" title="Overwrite current achievements with export data from clipboard">
       <i class="fas fa-upload"></i>
       Import
     </button>
