--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -3,29 +3,29 @@
   <div class="achievements-sheet__dm-controls">
     <button type="button" class="btn btn--primary" name="add-achievement">
       <i class="fas fa-plus"></i>
-      Add Achievement
+      {{localize "fvtt-player-achievements.forms.achievements-sheet.add-achievement"}}
     </button>
     <button type="button" class="btn btn--primary" name="export-achievements" title="Export achievement data to clipboard">
       <i class="fas fa-download"></i>
-      Export
+      {{localize "fvtt-player-achievements.forms.achievements-sheet.export"}}
     </button>
     <button type="button" class="btn btn--primary" name="import-achievements" title="Overwrite current achievements with export data from clipboard">
       <i class="fas fa-upload"></i>
-      Import
+      {{localize "fvtt-player-achievements.forms.achievements-sheet.import"}}
     </button>
   </div>
   {{else}}
   <div class="achievements-sheet__player-controls">
     <input type="checkbox" name="hide-awarded" id="hide-awarded" class="achievements-sheet__hide-awarded" {{#if hideAwarded}}checked{{/if}}>
-    <label for="hide-awarded">Hide Awarded</label>
+    <label for="hide-awarded">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-awarded"}}</label>
 
     <input type="checkbox" name="hide-unawarded" id="hide-unawarded" class="achievements-sheet__hide-unawarded" {{#if hideUnawarded}}checked{{/if}}>
-    <label for="hide-unawarded">Hide Unawarded</label>
+    <label for="hide-unawarded">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-unawarded"}}</label>
   </div>
   {{/if}}
   <div style="display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center;">
     <select id="actor-filter" name="actor-filter">
-      <option value="" {{#if (eq seluuid "")}}selected{{/if}}>All Players</option>
+      <option value="" {{#if (eq seluuid "")}}selected{{/if}}>{{localize "fvtt-player-achievements.forms.achievements-sheet.all-players"}}</option>
       {{#each currentPlayers as |player|}}
         <option value="{{player.uuid}}" {{#if (eq ../seluuid player.uuid)}}selected{{/if}}>{{player.name}}</option>
       {{/each}}
@@ -34,7 +34,7 @@
       type="text"
       name="achievement_filter"
       value="{{currentFilter}}"
-      placeholder="Filter by achievement name"
+      placeholder="{{localize "fvtt-player-achievements.forms.achievements-sheet.filter"}}"
       class="achievements-sheet__filter"
     >
     <button type="button" name="filter-azza" class="btn btn--primary achievements-sheet__filter-azza" style="width:50px;">
@@ -53,9 +53,9 @@
     </div>
   {{else}}
     {{#if currentFilter}}
-      <p>No achievements match your filter.</p>
+      <p>{{localize "fvtt-player-achievements.forms.achievements-sheet.no-achievements-match-filter"}}</p>
     {{else}}
-      <p>No achievements have been added yet.</p>
+      <p>{{localize "fvtt-player-achievements.forms.achievements-sheet.no-achievements-added"}}</p>
     {{/if}}
   {{/if}}
 </form>
