--- a/src/styles/fvtt-player-achievements.scss
+++ b/src/styles/fvtt-player-achievements.scss
@@ -1,7 +1,7 @@
 .achievements-sheet {
   width:100%;
   height:100%;
-  padding:10px;
+  padding: 0 10px 10px 10px;
   max-height:600px;
 
   .achievements-sheet__dm-controls {
