--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -1,4 +1,12 @@
 <form autocomplete="off" name="achievements-sheet" class="achievements-sheet" >
+  <div style="display:flex;flex-direction:row-reverse;flex-wrap:nowrap;padding-bottom:10px;">
+    <button type="button" class="btn btn--primary" style="max-width:50px" name="feedback">
+      <i class="fas fa-comment"></i>
+    </button>
+    <button type="button" class="btn btn--primary" style="max-width:50px" name="bugreport">
+      <i class="fas fa-bug"></i>
+    </button>
+  </div>
   {{#if isDM}}
   <div class="achievements-sheet__dm-controls">
     <button type="button" class="btn btn--primary" name="add-achievement">
