--- a/src/templates/achievement-block.hbs
+++ b/src/templates/achievement-block.hbs
@@ -15,7 +15,7 @@
           class="achievement-block__image-holder-button achievement-block__image-holder-button--edit"
           type="button"
           name="edit"
-          aria-label="Edit achievement"
+          title={{localize "fvtt-player-achievements.forms.achievement-block.edit"}}
           data-achievement_id="{{id}}"
         >
           <i class="fas fa-pencil-alt"></i>
@@ -25,7 +25,7 @@
           class="achievement-block__image-holder-button achievement-block__image-holder-button--delete"
           type="button"
           name="delete"
-          aria-label="Delete achievement"
+          title={{ localize "fvtt-player-achievements.forms.achievement-block.delete"}}
           data-achievement_id="{{id}}"
         >
           <i class="fas fa-trash-alt"></i>
