--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -1,12 +1,7 @@
 <form autocomplete="off" name="achievements-sheet" class="achievements-sheet" >
-  <div style="display:flex;flex-direction:row-reverse;flex-wrap:nowrap;padding-bottom:10px;">
-    <button type="button" class="btn btn--primary" style="max-width:50px" name="feedback" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.feedback"}}">
-      <i class="fas fa-comment"></i>
-    </button>
-    <button type="button" class="btn btn--primary" style="max-width:50px" name="bugreport" {{localize "fvtt-player-achievements.forms.achievements-sheet.bugreport"}}>
-      <i class="fas fa-bug"></i>
-    </button>
-  </div>
+  {{!-- <div style="display:flex;flex-direction:row-reverse;flex-wrap:nowrap;padding-bottom:10px;">
+
+  </div> --}}
   {{#if isDM}}
   <div class="achievements-sheet__dm-controls">
     <button type="button" class="btn btn--primary" name="add-achievement" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.add-achievement"}}">
@@ -20,6 +15,13 @@
     <button type="button" class="btn btn--primary" name="import-achievements" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.import-achievements"}}">
       <i class="fas fa-upload"></i>
       {{localize "fvtt-player-achievements.forms.achievements-sheet.import"}}
+    </button>
+    <div style="flex-grow:1"></div>
+    <button type="button" class="btn btn--primary" style="max-width:50px" name="feedback" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.feedback"}}">
+      <i class="fas fa-comment"></i>
+    </button>
+    <button type="button" class="btn btn--primary" style="max-width:50px" name="bugreport" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.bugreport"}}">
+      <i class="fas fa-bug"></i>
     </button>
   </div>
   {{else}}
