--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -20,6 +20,9 @@
     <button type="button" class="btn btn--primary" style="max-width:50px" name="bugreport" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.bugreport"}}">
       <i class="fas fa-bug"></i>
     </button>
+    <button type="button" class="btn btn--primary" style="max-width:50px" name="discord" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.discord"}}">
+      <i class="fab fa-discord"></i>
+    </button>
   </div>
   {{else}}
   <div class="achievements-sheet__player-controls">
