--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -62,7 +62,7 @@
   {{#if achievements}}
     <div class="achievements-container">
       {{#each achievements as |achievement|}}
-          {{> achievement-block isDM=../isDM myuuid=../myuuid achievement=achievement players=../currentPlayers hideDetails=../hideDetails }}
+          {{> achievement-block isDM=../isDM myuuid=../myuuid achievement=achievement players=../currentPlayers hideDetails=../hideDetails lockedAchievements=../lockedAchievements}}
       {{/each}}
     </div>
   {{else}}
