minor cosmetic adjustment

--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -55,7 +55,7 @@
       {{/if}}
     </button>
   </div>
-  <div>
+  <div style="display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center;">
     <input type="checkbox" name="hide-details" id="hide-details" class="achievements-sheet__hide-details" {{#if hideDetails}}checked{{/if}}>
     <label for="hide-details">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-details"}}</label>
   </div>
