--- a/src/templates/achievement-block.hbs
+++ b/src/templates/achievement-block.hbs
@@ -55,20 +55,27 @@
       {{else}}
       {{#if players }}
       <div class="achievement-block__image-holder-award-buttons-area">
+
         {{#ownedPlayersCount completedActors players }}
-          <p>{{localize "fvtt-player-achievements.forms.achievement-block.owned"}} <span style="font-size:smaller;"> ({{localize "fvtt-player-achievements.forms.achievement-block.click-to-remove"}})</span></p>
-          <div class="owned">
-            {{#ownedPlayers completedActors players}}
-              <button class="unassign" data-achievement_id="{{../id}}" data-player_id="{{this.uuid}}">{{this.name}}</button>
-            {{/ownedPlayers}}
+          <div style="display:flex;flex-flow:column nowrap">
+            <p>{{localize "fvtt-player-achievements.forms.achievement-block.owned"}} <span style="font-size:smaller;"> ({{localize "fvtt-player-achievements.forms.achievement-block.click-to-remove"}})</span></p>
+            <div class="owned">
+              <button class="unassign" data-achievement_id="{{id}}" data-player_id="ALL">{{localize "fvtt-player-achievements.forms.achievement-block.all-players"}}</button>
+              {{#ownedPlayers completedActors players}}
+                <button class="unassign" data-achievement_id="{{../id}}" title="{{this.name}}"  data-player_id="{{this.uuid}}">{{this.name}}</button>
+              {{/ownedPlayers}}
+            </div>
           </div>
           {{/ownedPlayersCount}}
         {{#unownedPlayersCount completedActors players }}
-          <p>{{localize "fvtt-player-achievements.forms.achievement-block.unowned"}} <span style="font-size:smaller;"> ({{localize "fvtt-player-achievements.forms.achievement-block.click-to-award"}})</span></p>
-          <div class="unowned">
-            {{#unownedPlayers completedActors players}}
-              <button class="assign" data-achievement_id="{{../id}}" data-player_id="{{this.uuid}}">{{this.name}}</button>
-            {{/unownedPlayers}}
+          <div style="display:flex;flex-flow:column nowrap">
+            <p>{{localize "fvtt-player-achievements.forms.achievement-block.unowned"}} <span style="font-size:smaller;"> ({{localize "fvtt-player-achievements.forms.achievement-block.click-to-award"}})</span></p>
+            <div class="unowned">
+                <button class="assign" data-achievement_id="{{id}}" data-player_id="ALL">{{localize "fvtt-player-achievements.forms.achievement-block.all-players"}}</button>
+              {{#unownedPlayers completedActors players}}
+                <button class="assign" data-achievement_id="{{../id}}" title="{{this.name}}" data-player_id="{{this.uuid}}">{{this.name}}</button>
+              {{/unownedPlayers}}
+            </div>
           </div>
         {{/unownedPlayersCount}}
       </div>
