fix: adjusted achievement block color to be more flexible when using theme overrides

--- a/src/styles/fvtt-player-achievements.scss
+++ b/src/styles/fvtt-player-achievements.scss
@@ -90,7 +90,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
 
-  background: darkgrey;
+  background: rgba(128, 128, 128, 0.5);
   margin-top: 5px;
   margin-bottom:5px;
   border: 1px solid black;
