--- a/src/templates/add-achievement-sheet.hbs
+++ b/src/templates/add-achievement-sheet.hbs
@@ -140,6 +140,9 @@
       </button>
     </div>
 
+  <label for="achievement_tags" class="add-achievement-form__label">{{localize "fvtt-player-achievements.forms.add-achievement-form.tags"}}</label>
+  <input type="text" name="achievement_tags" id="achievement_tags" class="add-achievement-form__tags" value="{{overrides.achievement.tags}}"/>
+
   <button type="submit" class="btn btn--primary add-achievement-form__submit">
     <i class="fas fa-plus"></i>
     {{#if (eq overrides.mode "edit")}}
